feat: change author name

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/pikokr/twitch-channel-points-tts.git",
-  "author": "파랑이 <parangee9706@gmail.com>",
+  "author": "pikokr <parangee9706@gmail.com>",
   "license": "MIT"
 }
