feat: remove main and make private

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "twitch-channel-points-tts",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "https://github.com/pikokr/twitch-channel-points-tts.git",
   "author": "pikokr <parangee9706@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "private": true
 }
