--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "repository": "https://github.com/pikokr/twitch-channel-points-tts.git",
   "author": "pikokr <parangee9706@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "dev": "parcel ./src/index.html"
+  },
+  "devDependencies": {
+    "parcel": "^1.12.4"
+  }
 }
