--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "private": true,
   "devDependencies": {
     "snowpack": "^3.0.13"
+  },
+  "scripts": {
+    "start": "snowpack dev",
+    "build": "snowpack build"
   }
 }
