--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "google-tts-api": "^2.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "tmi.js": "^1.7.2"
